--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ body {
   --grey: #2e2f42;
   --white: #ffffff;
   --dairy: #fcfcfc;
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 p,
@@ -61,8 +62,6 @@ img {
 .header {
   background-color: var(--white);
   border-bottom: 1px solid var(--cornflower);
-  padding-top: 24px;
-  padding-bottom: 24px;
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
@@ -105,12 +104,32 @@ img {
   margin-right: 40px;
 }
 .header-link {
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--navy-blue);
   cursor: pointer;
+  transition: color 250ms var(--timing-function);
+}
+
+.current-underline {
+  position: relative;
+  color: var(--ocean);
+}
+
+.current-underline::after {
+  content: "";
+  position: absolute;
+  left: 0px;
+  bottom: -1px;
+  width: 100%;
+  height: 4px;
+  background: var(--ocean);
+  border-radius: 2px;
 }
 
 .header-link:hover,
@@ -133,6 +152,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--slate);
+  transition: color 250ms var(--timing-function);
 }
 .header-address-item:hover,
 .header-address-item:focus {
@@ -145,6 +165,7 @@ img {
 
 .hero-img {
   width: 1440px;
+
   margin: 0 auto;
   background-color: var(--navy-blue);
   padding-top: 188px;
@@ -183,6 +204,7 @@ img {
   padding: 16px 32px 16px 32px;
   border: 0;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms var(--timing-function);
 }
 
 .order-btn:hover,
@@ -321,6 +343,7 @@ img {
   align-items: center;
   justify-content: center;
   background-color: var(--iris);
+  transition: background-color 250ms var(--timing-function);
 }
 
 .our-team-link:hover,
@@ -373,6 +396,9 @@ img {
   justify-content: center;
   align-items: center;
   height: 88px;
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--timing-function);
 }
 
 .fifth-section-link:hover,
@@ -387,6 +413,9 @@ img {
 
 .fifth-section-list-item-img {
   fill: var(--light-slate);
+  transition-timing-function: var(--timing-function);
+  transition-property: fill;
+  transition-duration: 250ms;
 }
 
 .filters {
@@ -405,6 +434,10 @@ img {
   padding: 12px 24px 12px 24px;
   border: 1px solid var(--cornflower);
   border-radius: 4px;
+  transition: color 250ms var(--timing-function),
+    background 250ms var(--timing-function), border 250ms var(--timing-function),
+    border-radius 250ms var(--timing-function),
+    box-shadow 250ms var(--timing-function);
 }
 
 .filters-list {
@@ -433,12 +466,41 @@ img {
 
 .project-cards-list-item-link {
   display: block;
+  transition: box-shadow 250ms var(--timing-function);
+}
+
+.overlay-container {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--iris);
+  transform: translateY(100%);
+  transition: transform 250ms var(--timing-function);
+}
+
+.overlay p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--cloud);
+  padding: 40px 32px 164px 32px;
 }
 
 .project-cards-list-item-link:hover,
 .project-cards-list-item-link:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.project-cards-list-item-link:hover .overlay,
+.project-cards-list-item-link:focus .overlay {
+  transform: translateY(0);
 }
 
 .cards-content {
@@ -522,6 +584,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms var(--timing-function);
 }
 
 .social-media-link:hover,
@@ -534,4 +597,63 @@ img {
 
 .team-cards {
   background: var(--cloud);
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.9);
+  opacity: 0.3;
+}
+
+.modal {
+  position: absolute;
+  width: 408px;
+  height: 576px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1.25);
+  opacity: 1;
+  background: var(--dairy);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transition: transform 250ms var(--timing-function),
+    opacity 250ms var(--timing-function) 200ms;
+}
+
+.close-modal {
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  right: 24px;
+  top: 24px;
+  background: var(--cornflower);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  transition: background-color 250ms var(--timing-function),
+    border-color 250ms var(--timing-function), fill 250ms var(--timing-function);
+}
+
+.close-modal:hover,
+.close-modal:focus {
+  background-color: var(--ocean);
+  border-color: var(--ocean);
+  fill: var(--white);
+}
+
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
 }
