--- a/css/styles.css
+++ b/css/styles.css
@@ -436,7 +436,6 @@ img {
   border-radius: 4px;
   transition: color 250ms var(--timing-function),
     background 250ms var(--timing-function), border 250ms var(--timing-function),
-    border-radius 250ms var(--timing-function),
     box-shadow 250ms var(--timing-function);
 }
 
@@ -452,7 +451,6 @@ img {
   color: var(--white);
   background: var(--ocean);
   border: 1px solid var(--ocean);
-  border-radius: 4px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
@@ -606,10 +604,13 @@ img {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
+  transition: visibility 250ms var(--timing-function),
+    opacity 250ms var(--timing-function),
+    pointer-events 250ms var(--timing-function);
 }
 
 .backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0.9);
+  transform: translate(-50%, -50%) scale(0.8);
   opacity: 0.3;
 }
 
@@ -619,7 +620,7 @@ img {
   height: 576px;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1.25);
+  transform: translate(-50%, -50%) scale(1);
   opacity: 1;
   background: var(--dairy);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
